--- a/playbooks/fix_web.yml
+++ b/playbooks/fix_web.yml
@@ -3,18 +3,17 @@
   hosts: all
   gather_facts: false
   become: true
-  
+
   tasks:
-    - debug:
+    - name: Notify status
+      ansible.builtin.debug:
         msg: "Website is down!"
 
     - name: Replace website
-      copy:
-       remote_src: yes
-       src: /tmp/index.html
-       dest: /usr/share/testpage/index.html
-       owner: root
-       group: root
-       mode: '0644'
-
-
+      ansible.builtin.copy:
+        remote_src: true
+        src: /tmp/index.html
+        dest: /usr/share/testpage/index.html
+        owner: root
+        group: root
+        mode: '0644'
