Change run_playbook to run_job_template

--- a/rulebooks/splunk-url-check.yml
+++ b/rulebooks/splunk-url-check.yml
@@ -14,12 +14,14 @@
       condition: event.url_check.status == "up"
     ## Define the action we should take should the condition be met
       action:
-        run_playbook:
-          name: wowza.yml
+        run_job_template:
+          organization: Default
+          name: wowza
 
     - name: Web site is down
       condition: event.url_check.status == "down"
     ## Define the action we should take should the condition be met
       action:
-        run_playbook:
-          name: fix_web.yml
+        run_job_template:
+          organization: Default
+          name: fix_web
