--- a/rulebooks/webhook_rulebook.yml
+++ b/rulebooks/webhook_rulebook.yml
@@ -15,7 +15,7 @@
       ## Define the action we should take when the condition is met
       action:
         run_job_template:
-          name: splunk-event
+          name: splunk-message-helper
           organization: Default
           extra_vars:
             message_content: "{{ event.payload.message }}"
